# websocket-fastapi-angular

./: .gitignore
backend/: Dockerfile  poetry.toml  pyproject.toml
backend/app/: main.py
backend/app/util/: config.py  model.py  process.py  tools.py
frontend/src/app/: app.component.html  app.component.ts  app.module.ts  upload.service.ts  websocket.service.ts
frontend/src/environments/: environment.prod.ts  environment.ts
